# CTPTraderTest

./: .gitignore  CMakeLists.txt  README.md
CTPTraAPI/: CMakeLists.txt  TraderSpi.cpp  TraderSpi.h
comm/: ConfigVar.h
src/: CMakeLists.txt  main.cpp  user_login_info.json
